crates/parser/src/tests/snapshots/parser__tests__grammar__nominal_type_item.snap
---
source: crates/parser/src/tests/grammar.rs
description: "UserId: nominal = Int;"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(TypeItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(TypeKind),
        KwNominal(1),
        Exit,
        Eq(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
