crates/parser/src/tests/snapshots/parser__tests__grammar__normal_binary_expr_stays_nested.snap
---
source: crates/parser/src/tests/grammar.rs
description: a + b + c
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BinaryExpr),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Plus(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Plus(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
