crates/parser/src/tests/snapshots/parser__tests__grammar__numeric_field_access_is_rejected.snap
---
source: crates/parser/src/tests/grammar.rs
description: tup.0
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(FieldExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Error(0),
        Int(1),
        Exit,
    ],
    errors: [
        Expected {
            expected: Ident,
            actual: Int,
        },
    ],
}
