crates/parser/src/tests/snapshots/parser__tests__grammar__only_the_tail_expression_drops_its_semicolon.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ a b; f() g() tail }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Error(0),
        Exit,
        Enter(ExprStmt),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        Error(1),
        Exit,
        Enter(ExprStmt),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        Error(2),
        Exit,
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [
        Expected {
            expected: Semi,
            actual: Ident,
        },
        Expected {
            expected: Semi,
            actual: Ident,
        },
        Expected {
            expected: Semi,
            actual: Ident,
        },
    ],
}
