crates/parser/src/tests/snapshots/parser__tests__grammar__path_call_with_colon_colon_in_block.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ Response::json(saved); { Response::ok } }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        ColonColon(2),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        Enter(ExprField),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        ColonColon(2),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
