crates/parser/src/tests/snapshots/parser__tests__grammar__place_call_hands_the_subject_a_destination.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ f() in p; x.f(1) in q; f.() in r; x.f.{ y: 1 } in s; f()() in t; a + b in u; a.b in v; f() in g { x: 1 }; }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(PlaceCallStmt),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        KwIn(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(PlaceCallStmt),
        Enter(MethodCallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        Enter(ExprField),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        KwIn(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(PlaceCallStmt),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        KwIn(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(PlaceCallStmt),
        Enter(CallExpr),
        Enter(FieldExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Dot(1),
        Enter(ArgList),
        Enter(RecordExpr),
        OpenBrace(1),
        Enter(ExprField),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Exit,
        KwIn(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(PlaceCallStmt),
        Enter(CallExpr),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        KwIn(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(PlaceCallStmt),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Plus(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        KwIn(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(PlaceCallStmt),
        Enter(FieldExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        KwIn(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(PlaceCallStmt),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        KwIn(1),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(ArgList),
        Enter(RecordExpr),
        OpenBrace(1),
        Enter(ExprField),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
