crates/parser/src/tests/snapshots/parser__tests__grammar__postfix_deref.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ *p; a * b; p.*; p.*.f; p.*.*; q . *; (p.*)(); }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(PrefixExpr),
        Star(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(BinaryExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Star(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(PostfixExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Star(1),
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(FieldExpr),
        Enter(PostfixExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Star(1),
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(PostfixExpr),
        Enter(PostfixExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Star(1),
        Exit,
        Dot(1),
        Star(1),
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(PostfixExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Star(1),
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(CallExpr),
        Enter(ParenExpr),
        OpenParen(1),
        Enter(PostfixExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Star(1),
        Exit,
        CloseParen(1),
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
