crates/parser/src/tests/snapshots/parser__tests__grammar__raw_token_tree_idents_are_not_names.snap
---
source: crates/parser/src/tests/grammar.rs
description: "#[inner(flag, nested({ raw [tree] }))] foo: mod;"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(ModuleItem),
        Enter(Attr),
        Hash(1),
        Enter(AttrInner),
        OpenBrack(1),
        Enter(AttrItem),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Enter(AttrArg),
        Enter(DelimitedTokenTree),
        OpenParen(1),
        Enter(TokenTree),
        Ident(1),
        Exit,
        Enter(TokenTree),
        Comma(1),
        Exit,
        Enter(TokenTree),
        Ident(1),
        Exit,
        Enter(DelimitedTokenTree),
        OpenParen(1),
        Enter(DelimitedTokenTree),
        OpenBrace(1),
        Enter(TokenTree),
        Ident(1),
        Exit,
        Enter(DelimitedTokenTree),
        OpenBrack(1),
        Enter(TokenTree),
        Ident(1),
        Exit,
        CloseBrack(1),
        Exit,
        CloseBrace(1),
        Exit,
        CloseParen(1),
        Exit,
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        CloseBrack(1),
        Exit,
        Exit,
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        KwMod(1),
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
