crates/parser/src/tests/snapshots/parser__tests__grammar__record_expr_field_recovery_keeps_close_brace.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ key: val 111 }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(RecordExpr),
        OpenBrace(1),
        Enter(FieldValue),
        Enter(FieldName),
        Ident(1),
        Exit,
        Colon(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Error(0),
        Int(1),
        CloseBrace(1),
        Exit,
    ],
    errors: [
        Expected {
            expected: CloseBrace,
            actual: Int,
        },
    ],
}
