crates/parser/src/tests/snapshots/parser__tests__grammar__remaining_expr_forms.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ { name, other }; [value; count]; \\a. a; recv.method(arg); 'loop: while cond { break 'loop done } }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(StructExpr),
        OpenBrace(1),
        Enter(FieldValue),
        Enter(FieldName),
        Ident(1),
        Exit,
        Exit,
        Comma(1),
        Enter(FieldValue),
        Enter(FieldName),
        Ident(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(RepeatExpr),
        OpenBrack(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        CloseBrack(1),
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(ClosureExpr),
        Backslash(1),
        Enter(IdentPat),
        Ident(1),
        Exit,
        Dot(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(MethodCallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Enter(ArgList),
        OpenParen(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(LabeledExpr),
        Label(1),
        Colon(1),
        Enter(WhileExpr),
        KwWhile(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(BreakExpr),
        KwBreak(1),
        Label(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [],
}
